# opencl-test

./: CMakeLists.txt
src/: main.cc  utils.cc  utils.hh  vadd.cl
